--- a/styles/main.css
+++ b/styles/main.css
@@ -11,10 +11,19 @@ body {
   margin: 0;
 }
 
+a:visited {
+  color: var(--color-b);
+}
+a:hover {
+  color: var(--color-d);
+}
+
 #intro {
-  height: 80%;
-  overflow: hidden;
-  padding: 7% 7% 7% 0;
+  position: absolute;
+  top: 50%;
+  left: 2.5%;
+  transform: translateY(-50%);
+  width: 90%;
 }
 
 #pp {
@@ -39,30 +48,24 @@ h2 {
   text-align: center;
 }
 
-a:visited {
-  color: var(--color-b);
-}
-a:hover {
-  color: var(--color-d);
-}
-
 #title {
   align-content: center;
-  height: 100%;
   overflow: visible;
+  height: 100%;
+  transform: translate(0, 30%);
 }
 
-.container {
-  overflow: auto;
-}
-
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
   :root {
     font-size: 2.5vw;
   }
 
   #intro {
     padding: 0;
+    top: 0;
+    transform: translateY(0);
+    left: 0%;
+    width: 100%;
   }
 
   #pp {
