--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
 }
 
-#main-container {
+#intro-container {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -26,6 +26,34 @@ body {
   background-position-x: right;
   background-position-y: bottom;
   background-size: 100vw;
+}
+
+#blog-links {
+  position: relative;
+  margin-left: 10%;
+  top: 15%;
+}
+
+.blog-bg {
+  background-image: url('../images/geo-bg.png');
+  background-repeat: no-repeat;
+  height: 100vh;
+  position: relative;
+  background-position-x: right;
+  background-position-y: bottom;
+  background-size: 100vw;
+
+  -moz-transform: scale(-1, 1);
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  transform: scale(1, -1);
+}
+
+.blog-container {
+  position: absolute;
+  top: 0;
+  padding: 12% 33% 0 4%;
 }
 
 a {
@@ -69,6 +97,25 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  font-family: 'Proza Libre', sans-serif;
+  font-size: 1.5em;
+  color: var(--color-c);
+  margin: 0;
+  text-align: left;
+  width: 100%;
+}
+
+h4 {
+  font-family: 'Lato', sans-serif;
+  font-size: 1em;
+  color: var(--color-e);
+  margin: 0;
+  text-align: left;
+  width: 100%;
+  font-weight: 800;
+}
+
 #title {
   align-content: center;
   overflow: visible;
@@ -78,7 +125,7 @@ h2 {
 
 @media screen and (max-width: 500px) {
   :root {
-    font-size: 2.5vw;
+    font-size: 3vw;
   }
 
   #intro {
@@ -96,13 +143,12 @@ h2 {
   }
 
   h1 {
-    margin: 4.8em 0 -0.1em 0 !important;
+    margin: 4em 0 -0.1em 0 !important;
   }
 
   h2 {
     margin: 0 0 0 0 !important;
   }
-
   #title {
     display: inline;
   }
