--- a/styles/main.css
+++ b/styles/main.css
@@ -116,6 +116,11 @@ h4 {
   font-weight: 800;
 }
 
+p {
+  font-family: 'DM Sans', sans-serif;
+  font-size: 0.8em;
+}
+
 #title {
   align-content: center;
   overflow: visible;
