--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,11 @@ body {
   padding: 0;
 }
 
+.blog-image {
+  width: 100%;
+  height: auto;
+}
+
 #blog-nav {
   background-image: url('../images/geo-bg.png');
   background-repeat: no-repeat;
@@ -43,10 +48,10 @@ body {
   background-position-y: bottom;
   background-size: 100vw;
 
-  -moz-transform: scale(-1, 1);
-  -webkit-transform: scale(-1, 1);
-  -o-transform: scale(-1, 1);
-  -ms-transform: scale(-1, 1);
+  -moz-transform: scale(1, -1);
+  -webkit-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
   transform: scale(1, -1);
 }
 
@@ -126,6 +131,12 @@ p {
   overflow: visible;
   height: 100%;
   transform: translate(0, 30%);
+}
+
+@media screen and (max-width: 800px) {
+  :root {
+    font-size: 2.5vw;
+  }
 }
 
 @media screen and (max-width: 500px) {
