--- a/styles/main.css
+++ b/styles/main.css
@@ -121,7 +121,17 @@ h4 {
   font-weight: 800;
 }
 
-p {
+h5 {
+  font-family: 'DM Sans', sans-serif;
+  font-size: 0.8em;
+  color: var(--color-a);
+  margin: 0;
+  text-align: left;
+  width: 100%;
+}
+
+p,
+li {
   font-family: 'DM Sans', sans-serif;
   font-size: 0.8em;
 }
@@ -140,7 +150,8 @@ p {
   h4 {
     font-size: 1.5em;
   }
-  p {
+  p,
+  li {
     font-size: 1.2em;
   }
 }
